<resources>
    <string name="app_name">MangApp</string>
    <string name="mangapp">MangApp</string>
    <string name="titulo">Titulo</string>
    <string name="icon">Icon</string>
    <string name="send">Send</string>
    <string name="title">Title</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="log_in_with_goggle">Log in with Goggle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="user">User</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_recovery">Send Recovery</string>
    <string name="password_recovery">Password recovery</string>
    <string name="goback">goBack</string>
    <string name="verification_email">Verification email</string>
    <string name="send_verification">Send verification</string>
    <string name="verification_not_received">I haven\'t received the verification email</string>
    <string name="pfp">Profile picture</string>
    <string name="cover">cover</string>
    <string name="cover_image">cover image</string>
    <string name="manga_title">Manga Title</string>
    <string name="manga_read">manga read</string>
    <string name="manga_pending">manga pending</string>
    <string name="manga_reading">manga reading</string>
    <string name="manga_favourite">manga favourite</string>
    <string name="next_page">Next page</string>
    <string name="previous_page">Previous page</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="manga_cover">Manga cover</string>
    <string name="release_year">Release year</string>
    <string name="manga_type">Shounen</string>
    <string name="type">Manga</string>
    <string name="manga_description">Description</string>
    <string name="list_selector">List selector</string>
    <string name="profile_picture">Profile picture</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_password">Change password</string>
    <string name="change_username">Change username</string>
    <string name="read_manga">Read manga</string>
    <string name="pending_manga">Pending manga</string>
    <string name="reading_manga">Reading manga</string>
    <string name="favorite_manga">Favorite manga</string>
</resources>