<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manga_title"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"
        android:layout_alignParentStart="true"/>

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="104dp"
        android:layout_height="108dp"
        android:layout_below="@id/title"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/cover_image"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_alignBottom="@id/coverImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/buttonRead"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/manga_read"
            android:src="@drawable/checkicon" />

        <ImageView
            android:id="@+id/buttonPending"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/manga_pending"
            android:src="@drawable/watchicon" />

        <ImageView
            android:id="@+id/buttonReading"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/manga_reading"
            android:padding="4dp"
            android:src="@drawable/playicon" />

        <ImageView
            android:id="@+id/buttonFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/manga_favourite"
            android:padding="6dp"
            android:src="@drawable/hearticon" />
    </LinearLayout>

</RelativeLayout>
