<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn.SignInActivity">

    <EditText
        android:id="@+id/editTextEmailVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Mail"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHighlight="#2196F3"
        android:textColorLink="#2196F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.54"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textViewVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.334"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.491" />

    <Button
        android:id="@+id/buttonVerification"
        android:layout_width="214dp"
        android:layout_height="60dp"
        android:backgroundTint="#000000"
        android:text="@string/send_verification"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageViewTitle"
        android:layout_width="134dp"
        android:layout_height="118dp"
        android:contentDescription="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208"
        app:srcCompat="@drawable/_5d76dd1b_b138_4ec5_ab8d_4dddd33df167_1_" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="233dp"
        android:layout_height="68dp"
        android:contentDescription="@string/title"
        android:fontFamily="@font/allerta_stencil"
        android:text="@string/mangapp"
        android:textAlignment="center"
        android:textColor="#101010"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageViewReturn"
        android:layout_width="41dp"
        android:layout_height="36dp"
        android:contentDescription="@string/goback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        app:srcCompat="?attr/actionModeCloseDrawable" />


</androidx.constraintlayout.widget.ConstraintLayout>